--- a/AppUI/MainWindow.xaml
+++ b/AppUI/MainWindow.xaml
@@ -4,9 +4,47 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AppUI"
-        mc:Ignorable="d"
+        mc:Ignorable="d" FontSize="20"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="20" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="25" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="20" />
+        </Grid.RowDefinitions>
+
+        <StackPanel Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" Orientation="Horizontal">
+            <Button x:Name="TaskListTitle" Margin="10"  Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Click="TaskListTitle_Click" >Load Tasks</Button>
+            <Button x:Name="TaskListTitle1" Margin="10"  Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" Click="TaskListTitle_Click" >Load Tasks</Button>
+        </StackPanel>
+        
+        <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="7">
+            <Menu DockPanel.Dock="Top">
+                <MenuItem Header="_File">
+                    <MenuItem Header="_Open"/>
+                    <MenuItem Header="_Close"/>
+                    <MenuItem Header="_Save"/>
+                </MenuItem>
+            </Menu>
+            
+        </DockPanel>
+        <DataGrid x:Name="Tasks" Grid.Row="3" Grid.Column="3">
+
+        </DataGrid>
         
     </Grid>
 </Window>
