--- a/AppUI/MainWindow.xaml
+++ b/AppUI/MainWindow.xaml
@@ -33,7 +33,8 @@
 
         <!-- <DataGrid x:Name="Tasks" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="3" Grid.RowSpan="3">
         </DataGrid>-->
-        <ListView x:Name="Lista" Grid.Row="2" Margin="10" Grid.Column="3" ItemsSource="{Binding Path=Table}">
+        <StackPanel Grid.Row="2" Grid.Column="3" Margin="10" >
+            <ListView x:Name="Lista" Grid.Row="2" Grid.Column="3" ItemsSource="{Binding Path=Table}" MinWidth="200" MinHeight="240">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding TaskName}" />
@@ -41,6 +42,7 @@
             </ListBox.ItemTemplate>
 
         </ListView>
+        </StackPanel>
         <StackPanel Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="3" Orientation="Horizontal">
             <Button x:Name="NextTask" Margin="10" Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="2">Next</Button>
             <Button x:Name="PreviousTask" Margin="10" Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="2">Prev</Button>
