Added DetailsDescriptionList and interaction between TaskList and DetailsList

--- a/AppUI/MainWindow.xaml
+++ b/AppUI/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AppUI"
         mc:Ignorable="d" FontSize="20"
-        Title="Książka kucharska by WSEI students" Height="450" Width="600">
+        Title="Książka kucharska by WSEI students" Height="450" Width="590">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20" />
@@ -28,21 +28,22 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="3" Orientation="Horizontal">
-            <ComboBox x:Name="ComboBox1" Margin="10"   Padding="15,0,0,0" Width="200" Foreground="Black" IsEditable="True" SelectionChanged="ComboBox_SelectionChanged_Click" DropDownClosed="ComboBox1_DropDownClosed" Text="Wybierz danie"/>
+            <!--DropDownClosed="ComboBox1_DropDownClosed"-->
+            <ComboBox x:Name="ComboBox1" Margin="10"   Padding="15,0,0,0" Width="200" Foreground="Black" IsEditable="True" SelectionChanged="ComboBox_SelectionChanged_Click" Text="Wybierz danie"/>
         </StackPanel>
 
         <!-- <DataGrid x:Name="Tasks" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="3" Grid.RowSpan="3">
         </DataGrid>-->
    
         <StackPanel Grid.Row="2" Grid.Column="3" Margin="10" >
-            <TextBlock Grid.Row="2" Grid.Column="3" Margin="10" Text="Lista zadań:"/>
-            <ListView x:Name="Lista" Grid.Row="2" Grid.Column="3" ItemsSource="{Binding Path=Table}" MinWidth="200" MinHeight="240">
+            <TextBlock Grid.Row="2" Grid.Column="3" Margin="10" Text="Lista zadań:" FontWeight="Bold"/>
+            <ListBox x:Name="Lista" IsSelected="true" Grid.Row="2" Grid.Column="3" ItemsSource="{Binding Path=Table}" MinWidth="200" MinHeight="240" SelectionChanged="Lista_SelectionChanged_Click">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding TaskName}" />
                     </DataTemplate>
                 </ListBox.ItemTemplate>
-            </ListView>
+            </ListBox>
         </StackPanel>
         
         <!--<StackPanel Grid.Row="6" Grid.Column="3" Grid.ColumnSpan="3" Orientation="Horizontal">
@@ -51,15 +52,29 @@
             <ListBox x:Name="TaskLst" Width="100"/>
         </StackPanel>-->
 
-        <StackPanel Grid.Row="1" Grid.RowSpan="3" Grid.Column="4" Margin="10">
-            <TextBlock Grid.Row="1" Grid.Column="4" Margin="10,0,10,20" Text="Szczegółowa lista zadań:"/>
-            <ListView x:Name="DetailsList" Grid.Row="2" Grid.Column="4" Height="280" Margin="10">
+        <StackPanel Grid.Row="2" Grid.RowSpan="3" Grid.Column="4" Margin="10">
+            <TextBlock Grid.Row="2" Grid.Column="4" Margin="10" Text="Szczegółowy opis:" FontWeight="Bold"/>
+
+            <!--<ListBox x:Name="DetailsList" ItemsSource="{Binding Path=Table}" Grid.Row="3" Grid.Column="4" MinWidth="200" MinHeight="240">
                 <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding TaskDescription}" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>-->
+
+            <!--<TextBlock x:Name="DetailsList" Text="{Binding TaskDescription}" Grid.Row="3" Grid.Column="4" MinWidth="200" MinHeight="240" FontSize="14" FontStyle="Italic" Background="#FFD7E5F1" Foreground="Black" Padding="5"/>-->
+
+
+            <ListView x:Name="DetailsList" ItemsSource="{Binding Path=Table}" Grid.Row="3" Grid.Column="4" Height="240" FontSize="14" FontStyle="Italic" Background="#FFD7E5F1" Foreground="Black" Padding="5">
+                <ListView.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding TaskDescription}"/>
                     </DataTemplate>
-                </ListBox.ItemTemplate>
+                </ListView.ItemTemplate>
             </ListView>
+
+
         </StackPanel>
 
     </Grid>
